syntax = "proto3";

message InternalFilesRow {
    int64 file_id = 1;
    string internal_path = 2;
}

message FoldersRow {
    int64 folder_id = 1;
    int64 parent_folder_id = 2;
    string name = 3;
    int32 folder_type = 4;
    optional int64 avatar_picture_id = 5;
    optional int64 description_file_id = 6;
}

message MusicItemsRow {
    int64 music_item_id = 1;
    string name = 2;
    int64 folder_id = 3;
}

message LyricsItemsRow {
    int64 lyrics_item_id = 1;
    int64 music_item_id = 2;
    string lyrics_tag = 3;
    int64 internal_file_id = 4;
}

enum PictureType {
    JPG = 0;
    PNG = 1;
    GIF = 2;
    WEBP = 3;
    BMP = 4;
    AVIF = 5;
}

message PictureItemsRow {
    int64 id = 1;
    int64 folder_id = 3;
    int64 internal_file_id = 4;
    PictureType picture_type = 5;
}

message TagsRow {
    int64 tag_id = 1;
    optional int64 music_item_id = 2;
    optional int64 folder_id = 3;
    string tag_name = 4;
    optional string string_value = 5;
    optional int32 int_value = 6;
}

enum MusicFileType {
    MP3 = 0;
    FLAC = 1;
}

message MusicFilesRow {
    int64 id = 1;
    int64 internal_file_id = 2;
    MusicFileType file_type = 3; 
}

enum MusicLinkType {
    EXTERNAL_FILE = 0;
    URL = 1;
}

message MusicLinksRow {
    int64 id = 1;
    int64 music_item_id = 2;
    string link = 3;
    MusicLinkType link_type = 4;
}

message PlaylistsRow {
    int64 playlist_id = 1;
    string name = 2;
    optional int64 avatar_picture_id = 3;
}

message PlaylistItemsRow {
    int64 playlist_item_id = 1;
    int64 playlist_id = 2;
    optional int64 music_item_id = 3;
}
